--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ python-bidi==0.4.2
 requests>=2.32.3
 aiohttp>=3.11.10
 #tkinter これはOSによってインストール方法が異なるのでここには記載しない(ちなみにmacOSで動いた時はversion 8.6でした)
+#pyautogui #これは、ScreenShotを撮るために使用している。ScreenShotを撮る際にはコメントアウトを外してインストールする
