--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 #設定ファイルを無視する
 /OCR_config.txt
+/OCR_config.json
 /ScreenShot_config.txt
 /ScreenShot_config.json
 #pychacheファイルを無視する
 **/__pycache__/**
 #venvファイルを無視する
-venv/**
+/venv/**
+#tmpファイルを無視する
+/tmp/**
